update broken string update readme and license

--- a/sources/tesqprocess.ui
+++ b/sources/tesqprocess.ui
@@ -51,7 +51,7 @@
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Please select the two pictures with the biggest match</string>
+        <string>Please select the two pictures with the biggest match:</string>
        </property>
       </widget>
      </item>
